project/impl/paas/env/ws/web-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: centodiciotto-ws
  labels:
    app: centodiciotto
spec:
  type: NodePort
  clusterIP: 10.96.60.130
  ports:
   - port: 8080
     targetPort: 8080
     nodePort: 30130
     protocol: TCP
  selector:
   app: centodiciotto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: centodiciotto-ws
  labels:
    app: centodiciotto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: centodiciotto
  template:
    metadata:
      labels:
        app: centodiciotto
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: centodiciotto-ws
          image: ***REMOVED***:8081/centodiciotto-ws:2.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
