project/impl/paas/env/ws/web-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centodiciotto-ingress
  namespace: centodiciotto-dev
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centodiciotto-ws
                port:
                  number: 8080
